Refactor project structure and enhance UI components
- Updated index.html with SEO meta tags and improved viewport settings.
- Added .prettierrc.json for consistent code formatting.
- Replaced package-lock.json with pnpm-lock.yaml for package management.
- Introduced HeroSection component to replace Header, enhancing the landing experience.
- Refactored About, Services, Projects, and Contact components for better structure and styling.
- Implemented Tailwind CSS for styling and responsiveness.
- Removed unused CSS files and adjusted the overall layout for improved user experience.

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,10 @@ dist
 dist-ssr
 *.local
 
+# Package manager lock files (use only pnpm)
+package-lock.json
+yarn.lock
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
